[package]
name = "rust-websocket-workshop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

[[bin]]
name = "echo_server"
path = "src/echo_server.rs"

[[bin]]
name = "broadcast_server"
path = "src/broadcast_server.rs"

[[bin]]
name = "websocket_server"
path = "src/websocket_server.rs"